# nacs-spcm

./: .gitignore  CMakeLists.txt
cmake/: FindSPCM.cmake  FindSleef.cmake
nacs-spcm/: CMakeLists.txt  Config.cpp  Config.h  Controller.cpp  Controller.h  ControllerText.cpp  ControllerText.h  DummyController.cpp  DummyController.h  DummyServer.cpp  DummyServer.h  DummyStream.cpp  DummyStream.h  DummyStreamManager.cpp  DummyStreamManager.h  FileCache.cpp  FileCache.h  FileManager.cpp  FileManager.h  FileStream.cpp  FileStream.h  FileStreamManager.cpp  FileStreamManager.h  FileWriter.cpp  FileWriter.h  IDataCache.cpp  IDataCache.h  SeqCache.cpp  SeqCache.h  Sequence.cpp  Sequence.h  SerialPort.cpp  SerialPort.h  Server.cpp  Server.h  Stream.cpp  Stream.h  StreamManager.cpp  StreamManager.h  Trigger.cpp  (+7 more)
test/: #test_output_kw.cpp#  #test_output_kw2_dualchn.cpp#  CMakeLists.txt  benchmarks.cpp  calc_wave_helper.h  config.yml  test_Config.cpp  test_Controller.cpp  test_DummyServer.cpp  test_Stream.cpp  test_StreamManager.cpp  test_compute_perf.cpp  test_data_stream_gen.cpp  test_data_stream_perf.cpp  test_file.cpp  test_fileIO.cpp  test_output.cpp  test_output_jz.cpp  test_output_kw.cpp  test_output_kw2.cpp  test_output_kw2_add_int.cpp  test_output_kw2_dualchn.cpp  test_output_kw2_func.cpp  test_output_kw_add_int.cpp  test_params.cpp  test_trigger.cpp
